🧰 forum/auth bug fixes
- Fixed fields issue on list status
- Fixed forum link
- Fixed forum parameters
- Fixed invalid forum schema structure
- Added exceptions